updated landing page for latest iteration

--- a/index-default.html
+++ b/index-default.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="https://advent.site44.com/assets/css/owl.carousel.css">
     <link rel="stylesheet" href="https://advent.site44.com/assets/css/owl.theme.css">
     <link rel="stylesheet" href="https://advent.site44.com/assets/css/ionicons.min.css"> <!-- Resource style -->
-    <link href="assets/css/style.css" rel="stylesheet" type="text/css" media="all" />
+    <link href="assets/css/style-default.css" rel="stylesheet" type="text/css" media="all" />
   </head>
   <body>
     <div class="wrapper">
