--- a/index.html
+++ b/index.html
@@ -17,41 +17,40 @@
     <link href="assets/css/style.css" rel="stylesheet" type="text/css" media="all" />
   </head>
   <body>
-    <div class="wrapper">
 
-      <div class="main cs-main" id="main">
-          <section class="split-home">
-
-            <section class="left-section">
-              <div class="hero-section">
-              <div class="hero-content text-center">
-
-              <div class="app-info wow fadeInUp">
-                <h1 class="wow fadeInUp">"Music Washes Away From The Soul The Dust of Everyday Life."</h1>
-                <h4>Surrounded by thousands of friends. Strobe lights  <br class="hidden-xs"> flashing. Bass thumping your hest. Days of no sleep.</h4>
-                <p>Recharge with a moment of peace before the next set.</p>
-
+  <div class="wrapper">
+   <div class="main cs-main" id="main">
+      <section class="split-home">
+         <section class="left-section">
+            <div class="hero-section">
+               <div class="hero-content text-center">
+                  <div class="app-info wow fadeInUp">
+                     <h1 class="wow fadeInUp">"Music Washes Away From The Soul The Dust of Everyday Life."</h1>
+                     <h4>Surrounded by thousands of friends. Strobe lights flashing.<br class="hidden-xs"> Bass thumping your hest. Days of no sleep.<br class="hidden-xs"> Recharge with a moment of peace before the next set.</h4>
+                     <div class="download-buttons wow fadeInUp" style="visibility: visible; animation-name: fadeInUp;">
+                        <a href="https://spoti.fi/3gVbJOw"><img src="assets/images/spotify2.png" width="150" alt="Download from App Store"></a>
+                     </div>
+                     <h5>From the crew at:</h5>
+                  
+                  <div class="app-img">
+                     <img class="wow fadeInUp" src="assets/images/logo.png"  width="200" alt="App Logo" />
+                  </div>
+                  <h4>Flight-Advisor is a free travel planning sms service.<br class="hidden-xs"> We're in beta. Click below to get on the invite list.</h4>
+                  <a class="btn btn-primary btn-action popup wow fadeInDown" data-wow-delay="0.2s" href="index-default.html" style="visibility: visible; animation-delay: 0.2s; animation-name: fadeInDown;">Sign Up</a>
+                  </div>
                </div>
-                <div class="app-img">
-                <img class="wow fadeInUp" src="assets/images/logo.png"  width="200" alt="App Logo" />
-              </div>
-               <div class="download-buttons wow fadeInUp" style="visibility: visible; animation-name: fadeInUp;">
-                 <a href="https://spoti.fi/3gVbJOw"><img src="assets/images/spotify2.png" width="150" alt="Download from App Store"></a>
-               </div>
-                  <form id="signupa" class="formee" action="javascript:void(0);">
-                  <input name="email" id="email" type="text">
-                  <input class="right inputnew" id="submit_email" type="submit" title="Send" value="Sign Up">
-                </form>
-             </div>
-           </div>
-          </section>
-                      <section class="right-section wow fadeIn" data-wow-delay="0.3s">
-            </section>
-        </section>
+            </div>
+         </section>
+         <section class="right-section wow fadeIn" data-wow-delay="0.3s">
+         </section>
+      </section>
+   </div>
+   <!-- Main Section -->
+</div>
+<!-- Wrapper-->
 
 
-    </div><!-- Main Section -->
-  </div><!-- Wrapper-->
+
 
 <!-- Jquery and Js Plugins -->
   <script type="text/javascript" src="https://advent.site44.com/assets/js/jquery-2.1.1.js"></script>
