--- a/thanks.html
+++ b/thanks.html
@@ -20,23 +20,18 @@
     <div class="wrapper">
 
       <div class="main cs-main" id="main">
-          <section class="split-home">
-            <section class="left-section wow fadeIn" data-wow-delay="0.3s">
+          <section class="split-homex">
 
-            </section>
-            <section class="right-section">
+            <section class="right-sectionx">
 
               <div class="hero-section">
               <div class="hero-content text-center">
 
               <div class="app-info wow fadeInUp">
-                <h1 class="wow fadeInUp">Make travel fun again.</h1>
-                <h4>Flight Advisor takes the guess <br class="hidden-xs">  work out of your travels. A <br class="hidden-xs"> free SMS service that tells you <br class="hidden-xs"> when to leave to the airport </h4>
-                <p>We are currently in beta. Sign up to receive an invitation</p>
-                <form id="signupa" class="formee" action="javascript:void(0);">
-                  <input name="email" id="email" type="text">
-                  <input class="right inputnew" id="submit_email" type="submit" title="Send" value="Get Early Access">
-                </form>
+                <h1 class="wow fadeInUp">Thanks for signing up!</h1>
+                <h4>Want to get sooner? Gain early access by inviting 3 friends </h4>
+
+                <p>Here's your unique link: https://flight-advisor.com/?id=kd37MC</p>
                </div>
              </div>
 
@@ -115,7 +110,7 @@
         const email_value = $("#email").val()
         submit_email(email_value)
         $("#email").val('')
-        window.location.href = "thanks.html";
+        alert('Thanks for Signing Up!')
        }
   );
 
