--- a/index.html
+++ b/index.html
@@ -14,48 +14,45 @@
     <link rel="stylesheet" href="https://advent.site44.com/assets/css/owl.carousel.css">
     <link rel="stylesheet" href="https://advent.site44.com/assets/css/owl.theme.css">
     <link rel="stylesheet" href="https://advent.site44.com/assets/css/ionicons.min.css"> <!-- Resource style -->
-    <link href="assets/css/style.css" rel="stylesheet" type="text/css" media="all" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap" rel="stylesheet">
+    <link href="assets/css/style-landing.css" rel="stylesheet" type="text/css" media="all" />
+
   </head>
   <body>
+    <div class="wrapper">
 
-  <div class="wrapper">
-   <div class="main cs-main" id="main">
-      <section class="split-home">
-         <section class="left-section">
-            <div class="hero-section">
-               <div class="hero-content text-center">
-                  <div class="app-info wow fadeInUp">
-                     <h1 class="wow fadeInUp">"Music Washes Away From The Soul The Dust of Everyday Life."</h1>
-                     <h4>Surrounded by thousands of friends. Strobe lights flashing.<br class="hidden-xs"> Bass thumping your chest. Days of no sleep.<br class="hidden-xs"> Recharge with a moment of peace before the next set.</h4>
-                     <div class="download-buttons wow fadeInUp" style="visibility: visible; animation-name: fadeInUp;">
-                        <a href="https://spoti.fi/3gVbJOw"><img src="assets/images/spotify2.png" width="150" alt="Download from App Store"></a>
-                     </div>
-                     <h5>From the crew at:</h5>
-                  
-                  <div class="app-img">
-                     <img class="wow fadeInUp" src="assets/images/logo.png"  width="200" alt="App Logo" />
-                  </div>
-                  <h4>Flight-Advisor is a free travel planning sms service.<br class="hidden-xs"> We're in beta. Click below to get on the invite list.</h4>
-                
+      <div class="main cs-main" id="main">
+          <section class="split-home">
+            <section class="left-section wow fadeIn" data-wow-delay="0.3s">
+
+            </section>
+            <section class="right-section">
+
+              <div class="hero-section">
+              <div class="hero-content text-center">
+
+              <div class="app-info wow fadeInUp">
+                <h1 class="wow fadeInUp">Take the <div style="display:inline;text-decoration: line-through;text-decoration-color:red;text-decoration-style:red;">Stress</div> Out of Getting To The Airport On Time.</h1>
+                <img class=" wow fadeInUp" src="assets/images/logo.png"  width="200" alt="App Logo" />
+
+                <h4>Flight Advisor is a free sms service <br class="hidden-xs">  to help manage your travel plans </h4>
+                <br/>
+                <br/>
                 <form id="signupa" class="formee" action="javascript:void(0);">
-                  <input name="email" id="email" type="email" placeholder="Enter Email" >
-                  <input class="right inputnew" id="submit_email" type="submit" title="Send" value="Sign Up">
+                  <input name="email" id="email" type="text" placeholder="Your Email" >
+                  <input class="right inputnew" id="submit_email" type="submit" title="Send" value="SIGN ME UP">
                 </form>
-
-                  </div>
                </div>
-            </div>
-         </section>
-         <section class="right-section wow fadeIn" data-wow-delay="0.3s">
-         </section>
-      </section>
-   </div>
-   <!-- Main Section -->
-</div>
-<!-- Wrapper-->
+             </div>
+           </div>
+          </section>
+        </section>
 
 
-
+    </div><!-- Main Section -->
+  </div><!-- Wrapper-->
 
 <!-- Jquery and Js Plugins -->
   <script type="text/javascript" src="https://advent.site44.com/assets/js/jquery-2.1.1.js"></script>
@@ -99,7 +96,8 @@
     const time_stamp_dict = {
         time_stamp: moment().format(),
         session_id:session_id,
-        url:window.location.href
+                url:window.location.href
+
     }
     const upload_dict = Object.assign({}, ip_data, time_stamp_dict);
     console.log({upload_dict})
