--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <title>Flight Advisor</title>
     <link rel="icon" href="https://advent.site44.com/assets/logos/favicon.png" type="image/png" sizes="16x16">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Advent Multipurpose Landing Page Template">
-    <meta name="keywords" content="Advent HTML Template, Advent Landing Page, Landing Page Template">
+    <meta name="description" content="Flight Advisor is a free sms service to help manage your travel plans">
+    <meta name="keywords" content="Flight, Advisor, sms, travel, plans">
     <link href="https://advent.site44.com/assets/css/bootstrap.min.css" rel="stylesheet" type="text/css" media="all" />
     <link href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700%7CRoboto" rel="stylesheet" type="text/css">
     <link rel="stylesheet" href="https://advent.site44.com/assets/css/animate.css"> <!-- Resource style -->
