updated for Google Analytics Tag

--- a/index.html
+++ b/index.html
@@ -15,10 +15,18 @@
     <link rel="stylesheet" href="https://advent.site44.com/assets/css/owl.theme.css">
     <link rel="stylesheet" href="https://advent.site44.com/assets/css/ionicons.min.css"> <!-- Resource style -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap" rel="stylesheet">
     <link href="assets/css/style-landing.css" rel="stylesheet" type="text/css" media="all" />
+    
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-0NHBH9C4ST"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
 
+      gtag('config', 'G-0NHBH9C4ST');
+    </script>
   </head>
   <body>
     <div class="wrapper">
@@ -26,10 +34,8 @@
       <div class="main cs-main" id="main">
           <section class="split-home">
             <section class="left-section wow fadeIn" data-wow-delay="0.3s">
-
             </section>
             <section class="right-section">
-
               <div class="hero-section">
               <div class="hero-content text-center">
 
