updated landing page

--- a/index.html
+++ b/index.html
@@ -40,10 +40,10 @@
               <div class="hero-content text-center">
 
               <div class="app-info wow fadeInUp">
-                <h1 class="wow fadeInUp">Take the <div style="display:inline;text-decoration: line-through;text-decoration-color:red;text-decoration-style:red;">Stress</div> Out of Getting To The Airport On Time.</h1>
+                <h1 class="wow fadeInUp">Take the <div style="display:inline;text-decoration: line-through;text-decoration-color:red;text-decoration-style:red;">Stress</div> Out of Travel.</h1>
                 <img class=" wow fadeInUp" src="assets/images/logo.png"  width="200" alt="App Logo" />
 
-                <h4>Flight Advisor is a free sms service <br class="hidden-xs">  to help manage your travel plans </h4>
+                <h4>Flight Advisor is a service <br class="hidden-xs">  to help manage your travel plans </h4>
                 <br/>
                 <br/>
                 <form id="signupa" class="formee" action="javascript:void(0);">
@@ -145,7 +145,7 @@
           console.log({email_value})
           submit_email(email_value)
           $("#email").val('')
-          setTimeout(updateFirebase,2000)
+          //setTimeout(updateFirebase,1000)
           }
        }
   );
